# sszb

./: Cargo.toml  README.md
sszb/: Cargo.toml  README.md
sszb/examples/: large_list.rs  large_list_of_structs.rs  struct_definition.rs
sszb/src/: decode.rs  encode.rs  lib.rs
sszb/src/decode/: impls.rs
sszb/src/encode/: impls.rs
sszb/tests/: tests.rs
sszb_derive/: Cargo.toml
sszb_derive/src/: lib.rs
